# ocaml-tui-chat-demo

./: Containerfile  LICENSE  Makefile  README.md  chat.opam  dune-project  run.sh  start-container.sh
lib/: chat_lib.ml  dune  logger.ml  logger.mli  msg.ml  msg.mli  msg_info.ml  msg_stream.ml  msg_stream.mli  params.ml
test/: dune
