(lang dune 3.7)

(name chat)

(generate_opam_files true)

(source
 (github darrenldl/not-available))

(authors "Darren Ldl")

(maintainers "Darren Ldl")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name chat)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
