(library
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-32-30-70@8"))
 (name chat_lib)
 (libraries containers
            angstrom
            cstruct
            cmdliner
            fmt
            oseq
            eio
            kcas_data
            mtime
            timedesc
            notty
            lwd
            hex
 )
 )
